Move workflow color definition for state "published" to public.css. The   "published" color definition is propably something to be excluded with   public.css in custom designs to avoid coloring of all normally visible links.

--- a/plonetheme/sunburst/skins/sunburst_styles/public.css
+++ b/plonetheme/sunburst/skins/sunburst_styles/public.css
@@ -10,6 +10,12 @@
  */
 
 
+/* workflow state color "published". Other definitions in member.css */
+.state-published {
+	color: #436976 !important;
+}
+
+
 /* @group Basics */
 
 body {
